tests/integration/error/opaque_bare_variable.alo
// expect-error: Opaque type 'Arena' must be used by reference

fun main() -> void {
    imut arena: Arena = arena_new();
}
